# zk-mixer-test

./: .binpath  Cargo.toml  README.md  build.rs  lalala.wat  output.wat
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
